engine-net-2/examples/Errors/TypeMismatchCompiled.grs
new graph "TypeMismatchCompiled.grg"

quit
